user auth added & permissions added
