# account/controller.go
@@ -1,27 +1,29 @@
 package account
 
 import (
+	"BankApp/config"
 	"BankApp/errors"
+	"BankApp/token"
 	"github.com/go-playground/validator"
 	"github.com/gofiber/fiber/v2"
 )
 
-type AccountController struct {
+type Controller struct {
 	service   AccountService
 	validator *validator.Validate
 }
 
-func NewAccountController(service AccountService) AccountController {
+func NewAccountController(service AccountService) Controller {
 	validate := validator.New()
 	_ = validate.RegisterValidation("currency", validateCurrency)
-	return AccountController{
+	return Controller{
 		service:   service,
 		validator: validate,
 	}
 }
 
 // GetAccount
-// @Summary Get a account by ID.
+// @Summary Get an account by ID.
 // @Tags Account
 // @Accept json
 // @Produce json
@@ -30,7 +32,7 @@ func NewAccountController(service AccountService) AccountController {
 // @Success 200 {object} AccountOutput
 // @Failure 400 {object} errors.Response
 // @Router /accounts/{id} [get]
-func (ac AccountController) GetAccount(ctx *fiber.Ctx) error {
+func (ac Controller) GetAccount(ctx *fiber.Ctx) error {
 	id, err := ctx.ParamsInt("id")
 	if err != nil {
 		return ctx.Status(fiber.StatusBadRequest).JSON(errors.NewResponseByKey("data_not_valid", "en"))
@@ -39,6 +41,11 @@ func (ac AccountController) GetAccount(ctx *fiber.Ctx) error {
 	if err != nil {
 		return ctx.Status(err.(errors.HttpError).Code).JSON(err.(errors.HttpError).Response)
 	}
+	authPayload := ctx.Locals(config.Configuration.Token.AuthorizationPayloadKey).(*token.Payload)
+	if account.Owner != authPayload.Username {
+		return ctx.Status(fiber.StatusForbidden).JSON(errors.NewResponseByKey("not_permitted", "en"))
+	}
+
 	return ctx.Status(fiber.StatusOK).JSON(account)
 }
 
@@ -53,14 +60,15 @@ func (ac AccountController) GetAccount(ctx *fiber.Ctx) error {
 // @Success 200 {array} AccountOutput
 // @Failure 400 {object} errors.Response
 // @Router /accounts [get]
-func (ac AccountController) ListAccounts(ctx *fiber.Ctx) error {
+func (ac Controller) ListAccounts(ctx *fiber.Ctx) error {
 	p := new(ListAccountParam)
 	if err := ctx.QueryParser(p); err != nil {
 		return ctx.Status(fiber.StatusBadRequest).JSON(errors.NewResponseByKey("data_not_valid", "en"))
 	}
-
 	p.setDefaults()
-	accounts, err := ac.service.ListAccounts(p)
+
+	authPayload := ctx.Locals(config.Configuration.Token.AuthorizationPayloadKey).(*token.Payload)
+	accounts, err := ac.service.ListAccounts(authPayload.Username, p)
 	if err != nil {
 		return ctx.Status(err.(errors.HttpError).Code).JSON(err.(errors.HttpError).Response)
 	}
@@ -76,7 +84,7 @@ func (ac AccountController) ListAccounts(ctx *fiber.Ctx) error {
 // @Success 201 {object} AccountOutput
 // @Failure 400 {object} errors.Response
 // @Router /accounts [post]
-func (ac AccountController) CreateAccount(ctx *fiber.Ctx) error {
+func (ac Controller) CreateAccount(ctx *fiber.Ctx) error {
 	var input CreateAccountInput
 	if err := ctx.BodyParser(&input); err != nil {
 		return ctx.Status(fiber.StatusBadRequest).JSON(errors.NewResponseByKey("data_not_valid", "en"))
@@ -85,6 +93,9 @@ func (ac AccountController) CreateAccount(ctx *fiber.Ctx) error {
 	if err != nil {
 		return ctx.Status(fiber.StatusBadRequest).JSON(errors.NewResponseByKey("data_not_valid", "en"))
 	}
+
+	authPayload := ctx.Locals(config.Configuration.Token.AuthorizationPayloadKey).(*token.Payload)
+	input.Owner = authPayload.Username
 	account, err := ac.service.CreateAccount(input)
 	if err != nil {
 		return ctx.Status(err.(errors.HttpError).Code).JSON(err.(errors.HttpError).Response)
@@ -101,7 +112,7 @@ func (ac AccountController) CreateAccount(ctx *fiber.Ctx) error {
 // @Success 200 {object} db.TransferTxResult
 // @Failure 400 {object} errors.Response
 // @Router /transfer [post]
-func (ac AccountController) TransferMoney(ctx *fiber.Ctx) error {
+func (ac Controller) TransferMoney(ctx *fiber.Ctx) error {
 	var input TransferInput
 	if err := ctx.BodyParser(&input); err != nil {
 		return ctx.Status(fiber.StatusBadRequest).JSON(errors.NewResponseByKey("data_not_valid", "en"))
