# user/route.go
@@ -1,9 +1,12 @@
 package user
 
-import "github.com/gofiber/fiber/v2"
+import (
+	"github.com/gofiber/fiber/v2"
+)
 
 func Router(app fiber.Router, service *UserServiceImpl) {
 	controller := NewUserController(service)
 	app.Post("/users", controller.CreateUser)
+	app.Post("/login", controller.LoginUser)
 	// other sample routes
 }
